--- a/project.json
+++ b/project.json
@@ -42,6 +42,14 @@
             "libs":     ["./ion-build"]
         },
         {
+            "name":     "ogg",
+            "version":  "1.3.5",
+            "url":      "https://github.com/xiph/ogg",
+            "commit":   "e1774cd",
+            "includes": ["./ion-build/include"],
+            "libs":     ["./ion-build"]
+        },
+        {
             "name":     "vulkansdk",
             "version":  "1.3.239.0",
             "res":      "https://github.com/ar-visions/ar-visions.github.io/blob/main/res/vulkan-sdk-1.3.239.0.zip?raw=true",
