--- a/project.json
+++ b/project.json
@@ -176,7 +176,7 @@
             "version":  "3.3.8",
             "commit":   "7482de6",
             "url":      "https://github.com/glfw/glfw",
-            "cmake":    {"args": ["-DCMAKE_C_FLAGS=\"-D_GLFW_VULKAN_LIBRARY=\\\"MoltenVK\\\"\""]},
+            "cmake":    {"args": ["-DGLFW_VULKAN_STATIC=Yes", "-DCMAKE_C_FLAGS=\"-D_GLFW_VULKAN_LIBRARY=\\\"MoltenVK\\\"\""]},
             "includes": ["./include"],
             "libs":     ["./ion-build/src"]
         },
