--- a/project.json
+++ b/project.json
@@ -139,6 +139,20 @@
             "install":  true
         },
         {
+            "name":     "moltenvk",
+            "version":  "1.2.3",
+            "commit":   "db8512a64f2c703e31ff7038b2859034062aa00f",
+            "url":      "https://github.com/KhronosGroup/MoltenVK",
+            "includes": ["./MoltenVK/include"],
+            "libs":     ["./MoltenVK/dylib/macOS"],
+            "diff":     "moltenvk.diff",
+            "platforms":["mac"],
+            "environment": {
+                "VULKAN_SDK":"%INSTALL_PREFIX%/lib/Frameworks/MoltenVK",
+                "VULKAN_LIBRARY_NAME":"MoltenVK"
+            }
+        },
+        {
             "name":     "vulkansdk",
             "version":  "1.3.250.0",
             "includes": ["%VULKAN_SDK%/macOS/include"],
