--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-include(../ion/ci/main.cmake)
+include(../prefix/main.cmake)
 get_name("project.json" name)
 project(${name})
 main()
