--- a/project.json
+++ b/project.json
@@ -7,44 +7,31 @@
             "name":     "zlib",
             "version":  "1.2.13",
             "commit":   "04f42ce",
-            "url":      "https://github.com/madler/zlib",
-            "includes": ["./"],
-            "libs":     ["./ion-build"],
-            "install":  true
+            "url":      "https://github.com/madler/zlib"
         },
         {
             "name":     "libpng",
             "version":  "1.6.39",
             "commit":   "07b8803",
-            "url":      "https://github.com/glennrp/libpng",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
-            "install":  true
+            "url":      "https://github.com/glennrp/libpng"
         },
         {
             "name":     "gsl",
             "version":  "2.7",
             "url":      "https://github.com/ampl/gsl",
-            "commit":   "47862078af4a204c4220f028656a19ddd3922144",
-            "includes": ["./", "./ion-build"],
-            "libs":     ["./ion-build"],
-            "diff":     "gsl.diff"
+            "commit":   "47862078af4a204c4220f028656a19ddd3922144"
         },
         {
             "name":     "sqlite3",
             "version":  "1.0.30",
             "url":      "https://github.com/alex85k/sqlite3-cmake",
-            "commit":   "121e7d273436c5de88956f559b940b8d69cadfbe",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"]
+            "commit":   "121e7d273436c5de88956f559b940b8d69cadfbe"
         },
         {
             "name":     "shine",
             "version":  "1.0.2",
             "url":      "https://github.com/toots/shine",
-            "commit":   "ab5e3526b64af1a2eaa43aa6f441a7312e013519",
-            "includes": ["../install/include"],
-            "libs":     ["../install/lib"]
+            "commit":   "ab5e3526b64af1a2eaa43aa6f441a7312e013519"
         },
         {
             "name":     "opus",
@@ -54,95 +41,64 @@
             "cmake": {
                 "args": ["-DOPUS_DISABLE_INTRINSICS=Yes"],
                 "path": "."
-            },
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
-            "install":  true
+            }
         },
         {
             "name":     "ogg",
             "version":  "1.3.5",
             "url":      "https://github.com/xiph/ogg",
-            "commit":   "e1774cd",
-            "includes": ["./include", "./ion-build/include"],
-            "libs":     ["./ion-build"],
-            "install":  true
+            "commit":   "e1774cd"
         },
         {
             "name":     "opusfile",
             "version":  "0.12",
             "url":      "https://github.com/xiph/opusfile",
             "commit":   "9d718345ce03b2fad5d7d28e0bcd1cc69ab2b166",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
             "cmake": {
                 "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes","-DOP_DISABLE_EXAMPLES=Yes"],
                 "path": "."
-            },
-            "install":  true
+            }
         },
         {
             "name":     "speexdsp",
             "version":  "1.2.1",
             "url":      "https://github.com/xiph/speexdsp",
-            "commit":   "1b28a0f",
-            "includes": ["./include"],
-            "libs":     ["../install/lib"]
+            "commit":   "1b28a0f"
         },
         {
             "name":     "opusenc",
             "version":  "0.21",
             "url":      "https://github.com/xiph/libopusenc",
             "commit":   "b19e1b14",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
             "cmake": {
                 "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes"],
                 "path": "."
-            },
-            "install":  true
+            }
         },
         {
             "name":     "freetype",
             "version":  "2.13.0",
             "commit":   "4d8db130ea4342317581bab65fc96365ce806b77",
             "url":      "https://github.com/freetype/freetype",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
             "cmake": {
                 "args": ["-DFT_DISABLE_BROTLI=Yes"],
                 "path": "."
-            },
-            "install":  true
+            }
         },
         {
             "name":     "bzip2",
             "version":  "1.0.8",
             "commit":   "2d8393924b9f3e014000c7420c7da7c3ddb74e2c",
             "url":      "https://gitlab.com/bzip2/bzip2",
-            "includes": ["./include"],
-            "libs":     ["./ion-build"],
             "cmake":    {
                 "args": ["-DENABLE_STATIC_LIB=Yes"]
-            },
-            "install":  true
+            }
         },
-        {
-            "name":     "glm",
-            "version":  "0.9.9.8",
-            "commit":   "bf71a83",
-            "url":      "https://github.com/g-truc/glm",
-            "includes": ["./"],
-            "libs":     ["./ion-build"]
-        },
-
         {
             "name":     "mbedtls",
             "version":  "3.4.0",
             "commit":   "1873d3b",
-            "url":      "https://github.com/Mbed-TLS/mbedtls",
-            "includes": ["./include"],
-            "libs":     ["./ion-build/library"]
+            "url":      "https://github.com/Mbed-TLS/mbedtls"
         }
     ]
 }
