--- a/overlays/opusenc/CMakeLists.txt
+++ b/overlays/opusenc/CMakeLists.txt
@@ -9,8 +9,8 @@ add_library(opusenc
     src/opus_header.c
     src/ogg_packer.c
     src/picture.c
-    src/unicode_support.c
-)
+    src/unicode_support.c)
+
 target_compile_definitions(opusenc PUBLIC PACKAGE_NAME="opusenc" PACKAGE_VERSION="0.21")
 
 target_include_directories(opusenc PUBLIC
@@ -18,13 +18,11 @@ target_include_directories(opusenc PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     ${CMAKE_INSTALL_PREFIX}/include/opus
     ${CMAKE_INSTALL_PREFIX}/include/speex
-    ${CMAKE_INSTALL_PREFIX}/include
-)
+    ${CMAKE_INSTALL_PREFIX}/include)
 
 target_link_libraries(opusenc PRIVATE opus opusfile)
 
-file(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.h")
-install(FILES ${SRC_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/opusenc)
-
 file(GLOB_RECURSE INC_FILES "${CMAKE_SOURCE_DIR}/include/*.h")
-install(FILES ${INC_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/opusenc)
+
+install(FILES   ${INC_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/opusenc)
+install(TARGETS opusenc      DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
