strip remaining vulkan from ux (vke/vkvg bound)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,14 @@
             "name":             "orbiter",
             "type":             "cppdbg",
             "request":          "launch",
-            "program":          "${workspaceFolder}/../orbiter/build-xcode/orbiter",
+            "program":          "${workspaceFolder}/../orbiter/build/orbiter",
             "args":             [],
             "stopAtEntry":      false,
-            "cwd":              "${workspaceFolder}/../orbiter/build-xcode/res",
+            "cwd":              "${workspaceFolder}/../orbiter/build",
             "environment":      [],
             "externalConsole":  false,
             "MIMode":           "gdb",
+            "preLaunchTask":    "build-orbiter",
             "presentation": {
                 "hidden": false,
                 "group": "",
