--- a/project.json
+++ b/project.json
@@ -2,7 +2,64 @@
     "name":   "ion",
     "version":"dev",
     "import": [
-        "vkengine", "vkvg",
+        {
+            "name":     "glm",
+            "version":  "0.9.9.8",
+            "commit":   "bf71a83",
+            "url":      "https://github.com/g-truc/glm",
+            "cmake": {
+                "args": ["-DBUILD_STATIC_LIBS=Yes"]
+            }
+        },
+        {
+            "name":     "vulkansdk",
+            "version":  "1.3.250.0",
+            "includes": ["%VULKAN_SDK%/macOS/include"],
+            "libs":     ["%VULKAN_SDK%/macOS/lib"],
+            "bins":     ["%VULKAN_SDK%/macOS/bin"]
+        },
+        {
+            "name":     "moltenvk",
+            "version":  "1.2.3",
+            "commit":   "db8512a64f2c703e31ff7038b2859034062aa00f",
+            "url":      "https://github.com/KhronosGroup/MoltenVK",
+            "platforms":["mac"],
+            "environment": {
+                "VULKAN_SDK":"%INSTALL_PREFIX%/lib/Frameworks/MoltenVK",
+                "VULKAN_LIBRARY_NAME":"MoltenVK"
+            }
+        },
+        {
+            "name":     "freetype",
+            "version":  "2.13.0",
+            "commit":   "4d8db130ea4342317581bab65fc96365ce806b77",
+            "url":      "https://github.com/freetype/freetype",
+            "cmake": {
+                "args": ["-DFT_DISABLE_BROTLI=Yes"],
+                "path": "."
+            }
+        },
+        {
+            "name":     "harfbuzz",
+            "version":  "7.3.0",
+            "commit":   "4584bcd",
+            "url":      "https://github.com/harfbuzz/harfbuzz",
+            "cmake":    {
+                "args": ["-DHB_HAVE_FREETYPE=Yes"]
+            }
+        },
+        {
+            "name":     "vma",
+            "version":  "3.0.1",
+            "url":      "https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator",
+            "commit":   "a6bfc23"
+        },
+        {
+            "name":     "glfw",
+            "version":  "3.3.8",
+            "commit":   "7482de6",
+            "url":      "https://github.com/glfw/glfw"
+        },
         {
             "name":     "zlib",
             "version":  "1.2.13",
@@ -72,16 +129,6 @@
             "commit":   "b19e1b14",
             "cmake": {
                 "args": ["-DOP_DISABLE_HTTP=Yes","-DOP_DISABLE_DOCS=Yes"],
-                "path": "."
-            }
-        },
-        {
-            "name":     "freetype",
-            "version":  "2.13.0",
-            "commit":   "4d8db130ea4342317581bab65fc96365ce806b77",
-            "url":      "https://github.com/freetype/freetype",
-            "cmake": {
-                "args": ["-DFT_DISABLE_BROTLI=Yes"],
                 "path": "."
             }
         },
