continue port, create cgi module (to replace vke wrapping case with a simpler abstract)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,16 +21,36 @@
             "osx": { "MIMode":  "lldb" }
         },
         {
-            "name":             "io test",
+            "name":             "triangle",
             "type":             "cppdbg",
             "request":          "launch",
-            "program":          "${workspaceFolder}/../io/build/io-test",
+            "program":          "${workspaceFolder}/../orbiter/build/triangle",
             "args":             [],
             "stopAtEntry":      false,
-            "cwd":              "${workspaceFolder}/../io/build",
+            "cwd":              "${workspaceFolder}/../orbiter/build",
             "environment":      [],
             "externalConsole":  false,
             "MIMode":           "gdb",
+            "preLaunchTask":    "build-triangle",
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1,
+            },
+            "osx": { "MIMode":  "lldb" }
+        },
+        {
+            "name":             "older-tri",
+            "type":             "cppdbg",
+            "request":          "launch",
+            "program":          "${workspaceFolder}/../orbiter/build/older-tri",
+            "args":             [],
+            "stopAtEntry":      false,
+            "cwd":              "${workspaceFolder}/../orbiter/build",
+            "environment":      [],
+            "externalConsole":  false,
+            "MIMode":           "gdb",
+            "preLaunchTask":    "build-older-tri",
             "presentation": {
                 "hidden": false,
                 "group": "",
