--- a/project.json
+++ b/project.json
@@ -2,22 +2,8 @@
     "name":   "ion",
     "version":"dev",
     "import": [
-        {
-            "name":     "glm",
-            "version":  "0.9.9.8",
-            "commit":   "bf71a83",
-            "url":      "https://github.com/g-truc/glm",
-            "cmake": {
-                "args": ["-DBUILD_STATIC_LIBS=Yes"]
-            }
-        },
-        {
-            "name":     "vulkansdk",
-            "version":  "1.3.250.1",
-            "includes": ["%VULKAN_SDK%/macOS/include"],
-            "libs":     ["%VULKAN_SDK%/macOS/lib"],
-            "bins":     ["%VULKAN_SDK%/macOS/bin"]
-        },
+        "mx",
+        "vulkan",
         {
             "name":     "freetype",
             "version":  "2.13.0",
