--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,24 @@
 {
     "version": "0.2.0",
     "configurations": [
+        {
+            "name":             "ux-app",
+            "type":             "cppdbg",
+            "request":          "launch",
+            "program":          "${workspaceFolder}/../ion/build/ux-app",
+            "args":             [],
+            "stopAtEntry":      false,
+            "cwd":              "${workspaceFolder}/../ion/build",
+            "environment":      [],
+            "externalConsole":  false,
+            "MIMode":           "gdb",
+            "preLaunchTask":    "build-ux-app",
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1,
+            },
+            "osx": { "MIMode":  "lldb" }
+        }
     ]
 }
