--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,26 @@
             },
 			"isBackground": false,
 			"problemMatcher": ["$gcc"]
+        },
+        {
+            "label": "build-circles",
+            "type": "shell",
+            "command": "make circles -j1",
+			"options": {
+                "cwd": "${workspaceFolder}/../ion/build"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build0",
+                "clear": true
+            },
+			"isBackground": false,
+			"problemMatcher": ["$gcc"]
         }
 	]
 }
