finish up bits of skia canvas, add skia build system

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "command": "make ux-app -j1",
 			"options": {
-                "cwd": "C:\\Users\\kalen\\src\\ion\\build"
+                "cwd": "${workspaceFolder}/../ion/build"
             },
             "group": {
                 "kind": "build",
