get skia working on mingw!

--- a/overlays/skia/gn/skia/BUILD.gn
+++ b/overlays/skia/gn/skia/BUILD.gn
@@ -466,6 +466,13 @@ config("warnings") {
     ]
   }
 
+  if (is_mingw) {
+    cflags += [
+      "-Wno-used-but-marked-unused",
+      "-Wno-unknown-pragmas"
+    ]
+  }
+
   if (is_clang) {
     cflags += [
       "-fcolor-diagnostics",
