--- a/project.json
+++ b/project.json
@@ -34,6 +34,12 @@
             "branch":   "remotes/origin/chrome/m116"
         },
         {
+            "name":     "datachannel",
+            "version":  "0.18.5",
+            "url":      "https://github.com/paullouisageneau/libdatachannel",
+            "commit":   "0522acd"
+        },
+        {
             "name":     "ogg",
             "version":  "1.3.5",
             "url":      "https://github.com/xiph/ogg",
